--- a/css/bootstrap-responsive.css
+++ b/css/bootstrap-responsive.css
@@ -95,6 +95,7 @@
   }
 }
 
+/*
 @media (min-width: 1200px) {
   .row {
     margin-left: -30px;
@@ -444,7 +445,7 @@
     margin-left: 0;
   }
 }
-
+*/
 @media (min-width: 768px) and (max-width: 979px) {
   .row {
     margin-left: -20px;
