--- a/css/weave.css
+++ b/css/weave.css
@@ -49,24 +49,24 @@ width: 50%;
 
       /* Custom page CSS
       -------------------------------------------------- */
-      /* Not required for template or sticky footer method. */
+      /* Not required for template or sticky footer method. 
 
       .container {
         width: auto;
-        max-width: 680px;
+        max-width: 700px;
       }
       .container .credit {
         margin: 20px 0;
       }
+      */
       
-      
-#timeline ul, #latestactivity ul
+#timeline ul, #latestactivity ul, #pinned ul, #received ul, #sent ul, #usertimeline ul
 {
 list-style-type: none;
 margin-left: 0;
 }
 
-#timeline ul li ul li, #latestactivity ul li ul li
+#timeline ul li ul li, #latestactivity ul li ul li, #pinned ul li ul li, #received ul li ul li, #sent ul li ul li, #usertimeline ul li ul li, #searchresults ul li ul li
 {
 display: inline;
 margin-right: 10px;
@@ -76,15 +76,6 @@ margin-right: 10px;
 {
 font-size: 36px;
 }
-
-#timeline ul li.alert-neutral, #latestactivity ul li.alert-neutral
-{
-color: #545454;
-background-color: #f6f6f6;
-border-color: #ececec;
-}
-
-
 
 .nav-tabs > li.active > a.sendthanks
 {
@@ -112,4 +103,199 @@ display: inline-block;
 background: url('../img/icon-list.png') no-repeat 10px 7px;
 padding-left: 44px;
 display: inline-block;
+}
+
+#signinsignuptab li, #signinsignuptab li
+{
+text-align: center;
+}
+
+.twitterlink
+{
+margin-top: 20px;
+border-top: dotted 1px #ccc;
+padding-top: 10px;
+}
+
+#latestactivity h4
+{
+color: #545454;
+margin-top: 20px;
+border-top: solid 1px #ccc;
+padding-top: 10px;
+margin-bottom: 20px;
+}
+
+.user-info
+{
+margin-bottom: 20px;
+}
+
+.username h1
+{
+font-size: 24px;
+color: #545454;
+}
+
+img.user-thumbnail
+{
+border: dotted 1px #ccc;
+padding: 2px;
+margin: 0 10px 10px 0;
+}
+
+.user-details ul
+{
+margin: 0;
+}
+
+.user-details li
+{
+list-style-type: none;
+border-bottom: dotted 1px #ccc;
+padding: 5px 0;
+}
+
+.user-details span
+{
+font-weight: bold;
+}
+
+#profilesettings .form-horizontal .control-group label
+{
+text-align: left;
+}
+
+#signin, #signup
+{
+padding-top: 20px;
+}
+
+#signin .form-horizontal .control-group label, #signup .form-horizontal .control-group label
+{
+width: 100px;
+}
+
+#signin .form-horizontal .controls, #signup .form-horizontal .controls
+{
+margin-left: 120px;
+}
+
+#profilesettings .form-horizontal .control-group
+{
+margin-bottom: 20px;
+border-bottom: dotted 1px #ececec;
+padding-bottom: 10px;
+}
+
+#privacysettings form ul
+{
+padding: 0;
+margin: 0;
+}
+
+#privacysettings form ul li
+{
+list-style-type: none;
+margin-bottom: 20px;
+border-bottom: dotted 1px #ececec;
+padding-bottom: 10px;
+}
+
+/* thanks sent/received/neutral */
+
+.alert {
+  padding: 8px 35px 8px 14px;
+  margin-bottom: 20px;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  background-color: #fcf8e3;
+  border: 1px solid #fbeed5;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+}
+
+.alert,
+.alert h4 {
+  color: #c09853;
+}
+
+.alert h4 {
+  margin: 0;
+}
+
+.alert .close {
+  position: relative;
+  top: -2px;
+  right: -21px;
+  line-height: 20px;
+}
+
+.alert-sent {
+  color: #468847;
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+}
+
+.alert-sent h4 {
+  color: #468847;
+}
+
+.alert-danger,
+.alert-error {
+  color: #b94a48;
+  background-color: #f2dede;
+  border-color: #eed3d7;
+}
+
+.alert-danger h4,
+.alert-error h4 {
+  color: #b94a48;
+}
+
+.alert-received {
+  color: #3a87ad;
+  background-color: #d9edf7;
+  border-color: #bce8f1;
+}
+
+.alert-received h4 {
+  color: #3a87ad;
+}
+
+.alert-neutral {
+	color: #545454;
+	background-color: #f6f6f6;
+	border-color: #ececec;
+}
+
+.alert-neutral h4 {
+  color: #545454;
+}
+
+.alert-block {
+  padding-top: 14px;
+  padding-bottom: 14px;
+}
+
+.alert-block > p,
+.alert-block > ul {
+  margin-bottom: 0;
+}
+
+.alert-block p + p {
+  margin-top: 5px;
+}
+
+/* search results */
+
+#searchresults ul
+{
+margin: 0;
+padding: 0;
+}
+
+#searchresults ul li
+{
+list-style-type: none;
 }
