--- a/css/weave.css
+++ b/css/weave.css
@@ -20,7 +20,16 @@ color: #A62121;
 text-decoration: none;
 }
 
-a:hover, a:visited
+a:hover
+{
+color: #5fbf5f;
+-webkit-transition: all 0.3s ease;
+-moz-transition: all 0.3s ease;
+transition: all 0.3s ease;
+text-decoration: none;
+}
+
+a:visited
 {
 color: #9f3a04;
 -webkit-transition: all 0.3s ease;
@@ -53,7 +62,7 @@ font-size: 18px;
 
 form legend
 {
-font-size: 18px;
+font-size: 16px;
 line-height: 24px;
 font-weight: 500;
 }
@@ -110,6 +119,35 @@ font-weight: 500;
         margin: 20px 0;
       }
       */
+      
+      
+/* Header styles */  
+  
+.navbar-inverse .navbar-inner {
+background-color: #525252;
+background-image: -moz-linear-gradient(top, #525252, #525252);
+background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#525252), to(#525252));
+background-image: -webkit-linear-gradient(top, #525252, #525252);
+background-image: -o-linear-gradient(top, #525252, #525252);
+background-image: linear-gradient(to bottom, #525252, #525252);
+background-repeat: repeat-x;
+border-color: #525252;
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff525252', endColorstr='#ff525252', GradientType=0);
+}   
+
+.navbar-inverse .brand
+{
+font-family: "freight-sans-pro",sans-serif;
+font-weight: bold;
+font-size: 26px;
+color: #fbf8e3;
+} 
+
+.nav .btn-small [class^="icon-"], .nav .btn-small [class*=" icon-"] {
+margin-top: 1px;
+}
+
+   
 
 /* Tab UI styles */
 
@@ -118,13 +156,13 @@ font-weight: 500;
 width: 50%;
 }
  
-#timeline ul, #latestactivity ul, #pinned ul, #received ul, #sent ul, #usertimeline ul
+#timeline ul, #latestactivity ul, #pinned ul, #received ul, #sent ul, #usertimeline ul, #notifications ul
 {
 list-style-type: none;
 margin-left: 0;
 }
 
-#timeline ul li ul li, #latestactivity ul li ul li, #pinned ul li ul li, #received ul li ul li, #sent ul li ul li, #usertimeline ul li ul li, #searchresults ul li ul li
+#timeline ul li ul li, #latestactivity ul li ul li, #pinned ul li ul li, #received ul li ul li, #sent ul li ul li, #usertimeline ul li ul li, #searchresults ul li ul li, #notifications ul li ul li
 {
 display: inline;
 margin-right: 10px;
@@ -144,7 +182,16 @@ font-size: 36px;
 
 .nav-tabs > li 
 {
-margin-bottom: -2px;
+margin-bottom: -1px;
+}
+
+.nav-tabs > li > a:hover {
+border-color: #dad7c1 #dad7c1 #dad7c1;
+}
+
+.nav > li > a:hover {
+text-decoration: none;
+background-color: #f5f0e7;
 }
 
 ul#profiletabs.nav
@@ -199,7 +246,7 @@ text-align: center;
 .twitterlink
 {
 margin-top: 20px;
-border-top: dotted 1px #ccc;
+border-top: dotted 1px #dad7c1;
 padding-top: 10px;
 }
 
@@ -207,7 +254,7 @@ padding-top: 10px;
 {
 color: #545454;
 margin-top: 20px;
-border-top: solid 1px #ccc;
+border-top: solid 1px #dad7c1;
 padding-top: 10px;
 margin-bottom: 20px;
 }
@@ -219,16 +266,24 @@ margin-bottom: 20px;
 
 .username h1
 {
-font-size: 24px;
+font-size: 30px;
 color: #545454;
 }
 
 img.user-thumbnail
 {
-border: dotted 1px #ccc;
+border: solid 1px #dad7c1;
 padding: 2px;
 margin: 0 10px 10px 0;
 }
+
+.user-details h4
+{
+font-size: 18px;
+border-bottom: solid 1px #dad7c1;
+padding-bottom: 5px;
+}
+
 
 .user-details ul
 {
@@ -238,7 +293,7 @@ margin: 0;
 .user-details li
 {
 list-style-type: none;
-border-bottom: dotted 1px #ccc;
+border-bottom: dotted 1px #dad7c1;
 padding: 5px 0;
 }
 
@@ -299,7 +354,7 @@ Error: Red
 */
 
 .alert {
-  padding: 8px 8px 8px 14px;
+  padding: 8px 8px 35px 14px;
   margin-bottom: 20px;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
   background-color: #fcf8e3;
@@ -309,9 +364,8 @@ Error: Red
           border-radius: 4px;
 }
 
-.alert,
-.alert h4 {
-  color: #c09853;
+#tabcontent .alert {
+  padding: 8px 8px 8px 14px;
 }
 
 .alert h4 {
@@ -475,7 +529,7 @@ padding-bottom: 5px;
 #signin.side-by-side {
 float: left;
 width: 46%;
-border-right: solid 1px #ccc;
+border-right: solid 1px #dad7c1;
 margin-right: 25px;
 padding-right: 20px;
 padding-left: 20px;
@@ -492,9 +546,16 @@ width: 40%;
 {
 background: #f5f0e7;
 padding: 10px;
-border-right: 1px solid #ddd;
-border-left: 1px solid #ddd;
-border-bottom: 1px solid #ddd;
+border-right: 1px solid #dad7c1;
+border-left: 1px solid #dad7c1;
+border-bottom: 1px solid #dad7c1;
+}
+
+.nav-tabs > .active > a, .nav-tabs > .active > a:hover
+{
+border-top: 1px solid #dad7c1;
+border-left: 1px solid #dad7c1;
+border-right: 1px solid #dad7c1;
 }
 
 #tabcontent .span6
@@ -547,4 +608,23 @@ color: #A62121;
 .navbar.navbar-static-top
 {
 margin-bottom: 20px;
+}
+
+/* thankyou form styles */
+
+.categories
+{
+margin-bottom: 20px;
+}
+
+.categories label
+{
+border-bottom: dotted 1px #dad7c1;
+padding-top: 5px;
+padding-bottom: 5px;
+}
+
+.categories label:hover
+{
+background-color: #fcf8e3;
 }
