--- a/css/weave.css
+++ b/css/weave.css
@@ -354,7 +354,7 @@ Error: Red
 */
 
 .alert {
-  padding: 8px 8px 35px 14px;
+  padding: 10px;
   margin-bottom: 20px;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
   background-color: #fcf8e3;
@@ -362,6 +362,14 @@ Error: Red
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
+}
+
+#tabcontent .alert.alert-new
+{
+background-image: url('../img/icon-sticker-orange.png');
+background-position: top left;
+background-repeat: no-repeat;
+  padding: 8px 8px 8px 26px;
 }
 
 #tabcontent .alert {
@@ -472,6 +480,11 @@ margin-top: 0px;
 margin-left: 5px;
 }
 
+.alert .actions
+{
+clear: left;
+}
+
 .alert .actions .btn-mini 
 {
 padding: 0 6px 0 0;
@@ -482,6 +495,25 @@ padding: 0 6px 0 0;
 margin-right: 5px;		
 }
 
+#tabcontent .alert .alert-meta ul
+{
+width: 50%;
+font-size: 10px;
+border-top: dotted 1px #ccc;
+padding-top: 5px;
+margin: 5px 0;
+}
+
+#tabcontent .alert .alert-meta ul li
+{
+list-style-type: none;
+float: left;
+}
+
+.alert .alert-meta [class^="icon-"], .alert .alert-meta [class*=" icon-"] {
+margin-top: -2px;
+margin-left: 3px;
+}
 
 /* search results */
 
@@ -612,6 +644,11 @@ margin-bottom: 20px;
 }
 
 /* thankyou form styles */
+
+.no-js #categories-accordion .collapse
+{
+height: auto;
+}
 
 .categories
 {
