--- a/css/weave.css
+++ b/css/weave.css
@@ -451,11 +451,19 @@ font-size: 10px;
 margin-left: 10px;
 }
 
-.alert.alert-private .alert-status-toggle a 
+.alert .alert-status-toggle.lock a 
 {
 display: block;
 width: 60px;
 background: url('../img/icon-locked.png') no-repeat 12px 0;
+padding-top: 28px;
+}
+
+.alert .alert-status-toggle.block a 
+{
+display: block;
+width: 60px;
+background: url('../img/icon-blocked.png') no-repeat 12px 0;
 padding-top: 28px;
 }
 
