--- a/css/bootstrap-responsive.css
+++ b/css/bootstrap-responsive.css
@@ -984,19 +984,13 @@
 		padding: 5px 0;
 		}
 		
-		#tabcontent .alert .alert-meta ul
-		{
-			width: 100%;
-			
+		
+	#send .categories
+	{
+		margin-left: 0px;
 		}
 		
-		#tabcontent .alert .alert-meta ul li
-		{
-			display: block;
-			
-		}
-		
-		.alert-status-controls	
+			.alert-status-controls	
 		{
 			float: right;
 			background: #f6f6f6;
@@ -1008,9 +1002,6 @@
 		{
 			float: none;
 		}
-		
-		
-		
 }
 
 @media (max-width: 979px) {
@@ -1172,9 +1163,14 @@
 	  width: 440px;
 	  }
 	  
-  	  #send .control-label
+	  #send .control-label
 {
 width: 70px;
+}
+
+
+#send .controls {
+margin-left: 100px;
 }
 }
 
