--- a/css/weave.css
+++ b/css/weave.css
@@ -79,11 +79,12 @@ font-weight: 500;
         margin: 0 auto -60px;
       }
 
-      /* Set the fixed height of the footer here */
+      /* Set the fixed height of the footer here 
       #push,
       #footer {
         height: 60px;
-      }
+      } */
+      
       #footer {
         background-color: #525252;
         margin-top: 20px;
@@ -99,11 +100,13 @@ font-weight: 500;
 	      text-decoration: underline;
       }
       
-      #footer ul li {
-	      list-style-type: none;
-	      display: inline;
-	      margin-right: 15px;
-      }
+	  #footer ul li {
+		  list-style-type: none;
+		  margin: 0;
+		  border-bottom: dotted 1px #ccc;
+		  padding: 5px 0;
+		  font-size: 12px;
+		 }
 
       /* Lastly, apply responsive CSS fixes as necessary */
       @media (max-width: 767px) {
@@ -152,6 +155,15 @@ font-family: "freight-sans-pro-n9", "freight-sans-pro",sans-serif;
 font-weight: 900;
 font-style: normal;
 font-size: 26px;
+color: #fbf8e3;
+} 
+
+.navbar-inverse .brand span
+{
+font-family: "freight-sans-pro-n9", "freight-sans-pro",sans-serif;
+font-weight: 600;
+font-style: normal;
+font-size: 16px;
 color: #fbf8e3;
 } 
 
@@ -692,8 +704,8 @@ body.front h3 {
 	line-height: 30px;
 }
 
-body.front #wrap {
-	background: #e8e4d9 url('../img/front-bg.jpg') repeat-x bottom left;
+body.front {
+	background: #e8e4d9 url('../img/front-bg.jpg') top left;
 }
 
 .front .intro {
