--- a/css/weave.css
+++ b/css/weave.css
@@ -737,12 +737,19 @@ body.front {
 
 a.signin-signup-box {
 	display: block;
-	background: url('../img/big-blue-arrow-right.png') no-repeat center right;
 	padding-left: 30px;
 	margin-bottom: 10px;
 	color: #fff;
 	font-weight: bold;
 	min-height: 98px;
+}
+
+a.signin-signup-box.twitter-signup {
+	background: url('../img/big-blue-arrow-right.png') no-repeat center right;
+}
+
+a.signin-signup-box.twitter-signin {
+	background: url('../img/big-green-arrow-right.png') no-repeat center right;
 }
 
 a.signin-signup-box:hover {
@@ -754,6 +761,9 @@ a.signin-signup-box:hover {
 	background: url('../img/twitter-bird-white.png') no-repeat center left;
 	padding: 40px 0px 40px 58px;
 }
+
+
+
 
 
 #what-is-weave img {
